@@ -1,4 +1,3 @@
-func_errors.m:009: Error: function declaration specifies a determinism but does not specify the mode: foo(int, int).
 func_errors.m:010: Error: some but not all arguments have modes: bar((int :: in), int).
 func_errors.m:011: Error: function arguments have modes, but function result doesn't: baz((int :: in), (int :: in)).
 func_errors.m:012: Error: function result has mode, but function arguments don't: quux(int, int).
