@@ -47,6 +47,7 @@ OTHER_SOURCES= \
 	fail_ite.m \
 	followcode_det_problem.m \
 	func_int_bug_main.m \
+	func_default_modes.m \
 	headvar_not_found.m \
 	higher_order.m \
 	higher_order2.m \
