@@ -12,6 +12,13 @@ NEWS since Mercury release 0.9:
   that appeared in the release of the day in early January 2000.
   `Value =^ field' is now the syntax for DCG field selection,
   rather than `Value := ^ field'.
+
+* You can now declare functions by giving a determinism but without
+  supplying the modes.  The default function modes will be assumed.
+  This is particularly useful for partial functions.
+  For example:
+  	GetEvens = list__filter_map(
+		(func(X) = X is semidet :- X mod 2 = 0)).
  
 * Functions `int:^/2' and `integer:^/2' have been removed.
   Use `int__xor/2' and `integer__xor/2' instead.
